# Event_lib

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  README.md  README_REFACTORING.md
include/event_lib/core/: event.hpp  event_packet.hpp  event_parser.hpp  event_stream.hpp  sensor_metadata.hpp
include/event_lib/io/camera/: evk4_camera.hpp
include/event_lib/io/dataset/: DatEventParser.hpp  DatasetEventStream.hpp  FileParser.hpp  HdfEventParser.hpp  RawEventParser.hpp
include/event_lib/io/parser/: DatParser.hpp  EventParserFactory.hpp  FileParser.hpp  HdfParser.hpp  RawParser.hpp
include/event_lib/io/stream/: DatEventStream.hpp  DatStream.hpp  DatasetEventStream.hpp  Evk4CameraStream.hpp  HdfEventStream.hpp  RawStream.hpp
include/event_lib/processing/: Frame.hpp  FrameQueue.hpp  histogram.hpp  visualize.hpp
src/core/: event.cpp  event_packet.cpp
src/io/dataset/: DatEventParser.cpp  DatasetEventStream.cpp  FileParser.cpp  HdfEventParser.cpp  RawEventParser.cpp
src/io/parser/: DatParser.cpp  EventParserFactory.cpp  FileParser.cpp
src/io/stream/: DatEventStream.cpp  DatStream.cpp  DatasetEventStream.cpp
src/processing/: Frame.cpp  FrameQueue.cpp  visualize.cpp
tests/: test_build_include_run.cpp  test_datH.cpp  test_event.cpp  test_event_packet.cpp  test_read_file.cpp  test_visualize.cpp
